# codex_dev

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  run_todo_web.sh
src/codex_dev/: __init__.py  todo.py  web.py
src/codex_dev/static/: styles.css
src/codex_dev/templates/: _todo_item.html  index.html
tests/: test_todo.py  test_web.py
