[project]
name = "codex-dev"
version = "0.1.0"
description = "A small command-line todo list app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Flask>=3"]

[project.optional-dependencies]
dev = ["pre-commit>=4", "pytest>=8", "ruff>=0.8"]
test = ["pytest>=8"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[project.scripts]
todo = "codex_dev.todo:main"
todo-web = "codex_dev.web:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
